--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <Button
         android:id="@+id/va_start"
         android:layout_width="wrap_content"
-        android:layout_height="37dp"
+        android:layout_height="wrap_content"
         android:text="@string/visual_acuity_test"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,10 +19,20 @@
     <Button
         android:id="@+id/calibration_start"
         android:layout_width="wrap_content"
-        android:layout_height="37dp"
+        android:layout_height="wrap_content"
         android:text="Calibrate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/va_start"
         app:layout_constraintStart_toStartOf="@+id/va_start"
         app:layout_constraintTop_toBottomOf="@+id/va_start" />
+
+    <Button
+        android:id="@+id/contrast_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Contrast Test"
+        app:layout_constraintBottom_toTopOf="@+id/va_start"
+        app:layout_constraintEnd_toEndOf="@+id/va_start"
+        app:layout_constraintStart_toStartOf="@+id/va_start"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
