--- a/app/src/main/res/layout/activity_color.xml
+++ b/app/src/main/res/layout/activity_color.xml
@@ -48,7 +48,6 @@
         app:layout_constraintTop_toTopOf="@id/noiseView"
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="ContentDescription"
-        android:src="@drawable/pont"
         tools:visibility="visible" />
 
     <Button
@@ -95,5 +94,25 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+<!--    <SeekBar-->
+<!--        android:id="@+id/seekBar"-->
+<!--        android:layout_width="302dp"-->
+<!--        android:layout_height="45dp"-->
+<!--        android:layout_marginTop="528dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.651"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--    <SeekBar-->
+<!--        android:id="@+id/seekBar2"-->
+<!--        android:layout_width="288dp"-->
+<!--        android:layout_height="32dp"-->
+<!--        android:layout_marginTop="1dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/seekBar" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
