--- a/app/src/main/res/layout/activity_color.xml
+++ b/app/src/main/res/layout/activity_color.xml
@@ -59,7 +59,8 @@
         app:layout_constraintBottom_toTopOf="@+id/downguideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/vguideline"
-        app:layout_constraintTop_toTopOf="@+id/upguideline" />
+        app:layout_constraintTop_toTopOf="@+id/upguideline"
+        android:enabled="false" />
 
     <Button
         android:id="@+id/leftBtnC"
@@ -70,7 +71,8 @@
         app:layout_constraintBottom_toTopOf="@+id/downguideline"
         app:layout_constraintEnd_toStartOf="@+id/vguideline"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/upguideline" />
+        app:layout_constraintTop_toTopOf="@+id/upguideline"
+        android:enabled="false"/>
 
     <Button
         android:id="@+id/upBtnC"
@@ -81,7 +83,8 @@
         app:layout_constraintBottom_toTopOf="@+id/upguideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:enabled="false" />
 
     <Button
         android:id="@+id/downBtnC"
@@ -92,7 +95,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/downguideline" />
+        app:layout_constraintTop_toTopOf="@+id/downguideline"
+        android:enabled="false" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/vguideline"
