--- a/app/src/main/res/layout/activity_vatest.xml
+++ b/app/src/main/res/layout/activity_vatest.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
 
     <ImageView
@@ -17,7 +18,8 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintVertical_bias="0.499"
+        />
 
     <Button
         android:id="@+id/rightBtn"
@@ -28,7 +30,8 @@
         app:layout_constraintBottom_toTopOf="@+id/downguideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/vguideline"
-        app:layout_constraintTop_toTopOf="@+id/upguideline" />
+        app:layout_constraintTop_toTopOf="@+id/upguideline"
+         />
 
     <Button
         android:id="@+id/leftBtn"
@@ -39,7 +42,8 @@
         app:layout_constraintBottom_toTopOf="@+id/downguideline"
         app:layout_constraintEnd_toStartOf="@+id/vguideline"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/upguideline" />
+        app:layout_constraintTop_toTopOf="@+id/upguideline"
+         />
 
     <Button
         android:id="@+id/upBtn"
@@ -50,7 +54,8 @@
         app:layout_constraintBottom_toTopOf="@+id/upguideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+         />
 
     <Button
         android:id="@+id/downBtn"
@@ -61,26 +66,30 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/downguideline" />
+        app:layout_constraintTop_toTopOf="@+id/downguideline"
+         />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/vguideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_percent="0.5"
+         />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/upguideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.21" />
+        app:layout_constraintGuide_percent="0.21"
+         />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/downguideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.79" />
+        app:layout_constraintGuide_percent="0.79"
+             />
 </androidx.constraintlayout.widget.ConstraintLayout>
