Writing results to file midway

--- a/app/src/main/res/layout/activity_vatest.xml
+++ b/app/src/main/res/layout/activity_vatest.xml
@@ -25,6 +25,7 @@
         android:id="@+id/rightBtn"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:enabled="false"
         android:background="#00FFFFFF"
         android:backgroundTint="#00FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/downguideline"
@@ -37,6 +38,7 @@
         android:id="@+id/leftBtn"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:enabled="false"
         android:background="#00FFFFFF"
         android:backgroundTint="#00FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/downguideline"
@@ -49,6 +51,7 @@
         android:id="@+id/upBtn"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:enabled="false"
         android:background="#00FFFFFF"
         android:backgroundTint="#00FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/upguideline"
@@ -61,6 +64,7 @@
         android:id="@+id/downBtn"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:enabled="false"
         android:background="#00FFFFFF"
         android:backgroundTint="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
