--- a/app/src/main/res/layout/activity_color.xml
+++ b/app/src/main/res/layout/activity_color.xml
@@ -7,7 +7,7 @@
     tools:context=".activities.ColorActivity">
 
     <Button
-        android:id="@+id/plusButton"
+        android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -20,7 +20,7 @@
         android:id="@+id/noiseView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_above="@+id/plusButton"
+        android:layout_above="@+id/startButton"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
