--- a/app/src/main/res/layout/activity_contrasttest.xml
+++ b/app/src/main/res/layout/activity_contrasttest.xml
@@ -10,7 +10,7 @@
         android:id="@+id/noiseView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_above="@+id/plusButton"
+        android:layout_above="@+id/startButton"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -49,7 +49,8 @@
         app:layout_constraintBottom_toTopOf="@+id/downguideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/vguideline"
-        app:layout_constraintTop_toTopOf="@+id/upguideline" />
+        app:layout_constraintTop_toTopOf="@+id/upguideline"
+        android:enabled="false"/>
 
     <Button
         android:id="@+id/leftBtnC"
@@ -60,7 +61,8 @@
         app:layout_constraintBottom_toTopOf="@+id/downguideline"
         app:layout_constraintEnd_toStartOf="@+id/vguideline"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/upguideline" />
+        app:layout_constraintTop_toTopOf="@+id/upguideline"
+        android:enabled="false" />
 
     <Button
         android:id="@+id/upBtnC"
@@ -71,7 +73,8 @@
         app:layout_constraintBottom_toTopOf="@+id/upguideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:enabled="false" />
 
     <Button
         android:id="@+id/downBtnC"
@@ -82,10 +85,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/downguideline" />
+        app:layout_constraintTop_toTopOf="@+id/downguideline"
+        android:enabled="false" />
 
     <Button
-        android:id="@+id/plusButton"
+        android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
