--- a/app/src/main/res/layout/activity_contrasttest_keyboard.xml
+++ b/app/src/main/res/layout/activity_contrasttest_keyboard.xml
@@ -10,7 +10,6 @@
         android:id="@+id/noiseView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_above="@+id/startButton"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -29,7 +28,6 @@
         android:id="@+id/demoView"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_above="@+id/startButton"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -58,66 +56,38 @@
         tools:ignore="ContentDescription"
         tools:srcCompat="@drawable/black_square"
         tools:visibility="visible" />
-    <Button
-        android:id="@+id/rightBtnC"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#00FFFFFF"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/downguideline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/vguideline"
-        app:layout_constraintTop_toTopOf="@+id/upguideline"/>
 
-    <Button
-        android:id="@+id/leftBtnC"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#00FFFFFF"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/downguideline"
-        app:layout_constraintEnd_toStartOf="@+id/vguideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/upguideline"/>
-
-    <Button
-        android:id="@+id/upBtnC"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="#00FFFFFF"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/upguideline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <Button
-        android:id="@+id/downBtnC"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="#00FFFFFF"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/downguideline"/>
-
-    <Button
-        android:id="@+id/startButton"
-        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
+<!--    <Button-->
+<!--        android:id="@+id/startButton"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:text="@string/start"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/downguideline"-->
+<!--        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"-->
+<!--        android:backgroundTint="@color/colorPrimaryDark"-->
+<!--        android:textSize="30sp"-->
+<!--        android:clickable="false"/>-->
+    <TextView
+        android:id="@+id/startTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:backgroundTint="@color/colorPrimaryDark"
-        android:text="@string/start"
-        android:textSize="30sp"
+        android:text="@string/start_keyboard"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/downBtnC"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="@+id/downguideline"
+        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
+        android:background="@color/colorPrimaryDark"
+        android:textSize="30sp"
+        android:clickable="false"
+        android:gravity="center"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/vguideline"
@@ -131,14 +101,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.25" />
+        app:layout_constraintGuide_percent="0.21" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/downguideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.75" />
+        app:layout_constraintGuide_percent="0.79" />
 
     <TextView
         android:id="@+id/textView"
@@ -154,7 +124,6 @@
         android:textSize="45sp"
         android:textColor="#000000"
         />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
