--- a/app/src/main/res/layout/activity_color_keyboard.xml
+++ b/app/src/main/res/layout/activity_color_keyboard.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.ContrastTestActivity">
+    tools:context=".activities.ColorActivity">
 
     <ImageView
         android:id="@+id/noiseView"
@@ -21,31 +21,14 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.043"
-        app:srcCompat="@drawable/ic_launcher_background"
-        tools:ignore="ContentDescription" />
-    <ImageView
-        android:id="@+id/demoView"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:scaleType="centerInside"
-        android:src="@drawable/sin_proba"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/downguideline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/upguideline"
-        app:layout_constraintVertical_bias="0.043"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_launcher_background"
         tools:ignore="ContentDescription" />
 
     <ImageView
-        android:id="@+id/gaussView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:id="@+id/dotView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@id/noiseView"
         app:layout_constraintEnd_toEndOf="@id/noiseView"
@@ -54,24 +37,24 @@
         app:layout_constraintTop_toTopOf="@id/noiseView"
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="ContentDescription"
-        tools:srcCompat="@drawable/black_square"
         tools:visibility="visible" />
 
-<!--    <Button-->
-<!--        android:id="@+id/startButton"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:layout_alignParentStart="true"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:text="@string/start"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="@+id/downguideline"-->
-<!--        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"-->
-<!--        android:backgroundTint="@color/colorPrimaryDark"-->
-<!--        android:textSize="30sp"-->
-<!--        android:clickable="false"/>-->
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/upguideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="@string/color_instructions"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textSize="42sp"
+        android:textColor="#000000"
+        />
+
+
     <TextView
         android:id="@+id/startTextView"
         android:layout_width="0dp"
@@ -88,6 +71,7 @@
         android:textSize="30sp"
         android:gravity="center"/>
 
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/vguideline"
         android:layout_width="wrap_content"
@@ -100,29 +84,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.21" />
+        app:layout_constraintGuide_percent="0.25" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/downguideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.79" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/upguideline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/find"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:textSize="45sp"
-        android:textColor="#000000"
-        />
-
+        app:layout_constraintGuide_percent="0.75" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
